--- a/FocalEngine-dev/FocalEngine-dev.vcxproj
+++ b/FocalEngine-dev/FocalEngine-dev.vcxproj
@@ -108,6 +108,7 @@ xcopy  "$(ProjectDir)res" "$(SolutionDir)out\$(Configuration)\res" /s /e /I /y</
     <ClCompile Include="src\scene.cpp" />
     <ClCompile Include="src\shader.cpp" />
     <ClCompile Include="src\shaderManager.cpp" />
+    <ClCompile Include="src\skybox.cpp" />
     <ClCompile Include="src\texture.cpp" />
     <ClCompile Include="src\vendor\glad.c" />
     <ClCompile Include="src\vendor\stb_image.cpp" />
@@ -128,6 +129,7 @@ xcopy  "$(ProjectDir)res" "$(SolutionDir)out\$(Configuration)\res" /s /e /I /y</
     <ClInclude Include="include\scene.h" />
     <ClInclude Include="include\shader.h" />
     <ClInclude Include="include\shaderManager.h" />
+    <ClInclude Include="include\skybox.h" />
     <ClInclude Include="include\vendor\assimp\aabb.h" />
     <ClInclude Include="include\vendor\assimp\ai_assert.h" />
     <ClInclude Include="include\vendor\assimp\anim.h" />
@@ -1354,6 +1356,8 @@ xcopy  "$(ProjectDir)res" "$(SolutionDir)out\$(Configuration)\res" /s /e /I /y</
     <None Include="include\vendor\glm\gtx\wrap.inl" />
     <None Include="res\shader\basic.frag" />
     <None Include="res\shader\basic.vert" />
+    <None Include="res\shader\skybox.frag" />
+    <None Include="res\shader\skybox.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
