--- a/FocalEngine-dev/FocalEngine-dev.vcxproj
+++ b/FocalEngine-dev/FocalEngine-dev.vcxproj
@@ -102,6 +102,10 @@ xcopy  "$(ProjectDir)res" "$(SolutionDir)out\$(Configuration)\res" /s /e /I /y</
     <ClCompile Include="src\camera.cpp" />
     <ClCompile Include="src\game\gui.cpp" />
     <ClCompile Include="src\inputManager.cpp" />
+    <ClCompile Include="src\lights\ambientLight.cpp" />
+    <ClCompile Include="src\lights\corelight.cpp" />
+    <ClCompile Include="src\lights\directionalLight.cpp" />
+    <ClCompile Include="src\lights\pointLight.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\mesh.cpp" />
     <ClCompile Include="src\model.cpp" />
@@ -124,6 +128,10 @@ xcopy  "$(ProjectDir)res" "$(SolutionDir)out\$(Configuration)\res" /s /e /I /y</
     <ClInclude Include="include\camera.h" />
     <ClInclude Include="include\game\gui.h" />
     <ClInclude Include="include\inputManager.h" />
+    <ClInclude Include="include\lights\ambientLight.h" />
+    <ClInclude Include="include\lights\corelight.h" />
+    <ClInclude Include="include\lights\directionalLight.h" />
+    <ClInclude Include="include\lights\pointLight.h" />
     <ClInclude Include="include\mesh.h" />
     <ClInclude Include="include\model.h" />
     <ClInclude Include="include\scene.h" />
