--- a/FocalEngine-dev/imgui.ini
+++ b/FocalEngine-dev/imgui.ini
@@ -1,8 +1,207 @@
 [Window][Debug##Default]
-Pos=781,482
-Size=400,400
+Pos=68,226
+Size=1069,816
 
 [Window][Exit NixEngine]
-Pos=1105,680
+Pos=785,500
 Size=350,80
+
+[Window][Dear ImGui Demo]
+Pos=429,61
+Size=618,596
+
+[Window][Example: Console]
+Pos=634,682
+Size=564,465
+
+[Window][Dear ImGui Debug Log]
+Pos=974,101
+Size=842,470
+
+[Window][Console]
+Pos=23,86
+Size=600,400
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=1080,398
+Size=323,360
+
+[Window][Dear ImGui ID Stack Tool]
+Pos=529,234
+Size=694,306
+
+[Window][Dear ImGui Style Editor]
+Pos=869,281
+Size=368,574
+
+[Window][About Dear ImGui]
+Pos=60,60
+Size=536,130
+
+[Window][Example: Log]
+Pos=1368,434
+Size=500,400
+
+[Window][Example: Property editor]
+Pos=721,211
+Size=430,478
+
+[Window][Example: Simple layout]
+Pos=1373,227
+Size=979,793
+
+[Window][Example: Simple layout/left pane_AED60EF8]
+IsChild=1
+Size=160,737
+
+[Window][Example: Auto-resizing window]
+Pos=1523,576
+Size=431,196
+
+[Window][Example: Long text display]
+Pos=1424,478
+Size=520,600
+
+[Window][Same title as another window##1]
+Pos=100,100
+Size=397,68
+
+[Window][Same title as another window##2]
+Pos=100,200
+Size=395,68
+
+[Window][###AnimatedTitle]
+Pos=39,356
+Size=227,52
+
+[Window][Example: Simple overlay]
+Pos=10,0
+Size=212,88
+
+[Window][Example: Custom rendering]
+Pos=551,119
+Size=1650,1082
+
+[Window][imgui-console]
+Pos=615,507
+Size=585,395
+
+[Window][NixEngine Console]
+Pos=54,97
+Size=600,400
+
+[Window][Show Style Editor]
+Pos=316,68
+Size=600,645
+
+[Window][Example: Constrained Resize]
+Pos=200,142
+Size=881,495
+
+[Window][Dear ImGui Demo/ResizableChild_D5443E47]
+IsChild=1
+Size=592,144
+
+[Window][Dear ImGui Demo/Red_1D4E05CE]
+IsChild=1
+Size=200,100
+
+[Window][Delete?]
+Pos=1147,665
+Size=266,110
+
+[Window][Stacked 1]
+Pos=810,286
+Size=411,176
+
+[Window][Debug]
+Pos=40,91
+Size=600,400
+
+[Window][Reset Settings?]
+Pos=1149,634
+Size=262,108
+
+[Window][Example: Documents]
+Pos=1013,735
+Size=609,260
+
+[Window][Text Editor]
+Pos=635,87
+Size=614,532
+
+[Window][Framerate test]
+Pos=-370,701
+Size=407,341
+Collapsed=1
+
+[Table][0xD181190E,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xC9935533,3]
+Column 0  Weight=0.8607
+Column 1  Weight=1.1393
+Column 2  Weight=1.0000
+
+[Table][0x64418101,3]
+RefScale=16
+Column 0  Width=58
+Column 1  Width=64
+Column 2  Width=66
+
+[Table][0x47600645,3]
+RefScale=16
+Column 0  Width=73
+Column 1  Width=89
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=16
+Column 0  Width=61
+Column 1  Width=58
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x1F146634,3]
+RefScale=16
+Column 0  Width=61
+Column 1  Width=58
+Column 2  Width=60
+
+[Table][0x49F8DCEA,3]
+RefScale=16
+Column 0  Weight=1.0000
+Column 1  Width=120
+Column 2  Width=180
+
+[Table][0xDA36A7E0,6]
+RefScale=16
+Column 0  Width=37 Sort=0v
+Column 1  Width=80
+Column 2  Width=78
+Column 3  Width=71
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
+[imgui-console][Console]
+m_AutoScroll=1
+m_ScrollToBottom=0
+m_ColoredOutput=1
+m_FilterBar=1
+m_TimeStamps=1
+m_WindowAlpha=1.000
+COL_COMMAND=255,155,70,255
+COL_LOG=255,255,255,127
+COL_WARNING=255,221,94,255
+COL_ERROR=255,93,93,255
+COL_INFO=117,244,117,255
+COL_TIMESTAMP=255,255,255,127
 
