--- a/FocalEngine-dev/FocalEngine-dev.vcxproj
+++ b/FocalEngine-dev/FocalEngine-dev.vcxproj
@@ -61,7 +61,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;WIN32;_WINDOWS;JPH_SHARED_LIBRARY;NDEBUG;JPH_OBJECT_STREAM;JPH_USE_AVX2;JPH_USE_AVX;JPH_USE_SSE4_1;JPH_USE_SSE4_2;JPH_USE_LZCNT;JPH_USE_TZCNT;JPH_USE_F16C;JPH_USE_FMADD;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
@@ -105,29 +105,35 @@ xcopy  "$(ProjectDir)res" "$(SolutionDir)out\$(Configuration)\res" /s /e /I /y</
     <ClCompile Include="src\camera.cpp" />
     <ClCompile Include="src\core\console.cpp" />
     <ClCompile Include="src\core\coreGUI.cpp" />
+    <ClCompile Include="src\engine.cpp" />
+    <ClCompile Include="src\framebuffer.cpp" />
     <ClCompile Include="src\game\gui.cpp" />
     <ClCompile Include="src\inputManager.cpp" />
     <ClCompile Include="src\lights\ambientLight.cpp" />
     <ClCompile Include="src\lights\corelight.cpp" />
     <ClCompile Include="src\lights\directionalLight.cpp" />
     <ClCompile Include="src\lights\pointLight.cpp" />
-    <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\mesh.cpp" />
     <ClCompile Include="src\model.cpp" />
     <ClCompile Include="src\physicsManager.cpp" />
+    <ClCompile Include="src\renderer.cpp" />
     <ClCompile Include="src\scene.cpp" />
+    <ClCompile Include="src\sceneManager.cpp" />
     <ClCompile Include="src\shader.cpp" />
     <ClCompile Include="src\shaderManager.cpp" />
     <ClCompile Include="src\skybox.cpp" />
+    <ClCompile Include="src\tempMain.cpp" />
     <ClCompile Include="src\texture.cpp" />
     <ClCompile Include="src\vendor\glad.c" />
     <ClCompile Include="src\vendor\imgui.cpp" />
+    <ClCompile Include="src\vendor\imgui_console.cpp" />
     <ClCompile Include="src\vendor\imgui_demo.cpp" />
     <ClCompile Include="src\vendor\imgui_draw.cpp" />
     <ClCompile Include="src\vendor\imgui_impl_glfw.cpp" />
     <ClCompile Include="src\vendor\imgui_impl_opengl3.cpp" />
     <ClCompile Include="src\vendor\imgui_tables.cpp" />
     <ClCompile Include="src\vendor\imgui_widgets.cpp" />
+    <ClCompile Include="src\vendor\NixTools\debugger.cpp" />
     <ClCompile Include="src\vendor\stb_image.cpp" />
     <ClCompile Include="src\window.cpp" />
   </ItemGroup>
@@ -141,6 +147,8 @@ xcopy  "$(ProjectDir)res" "$(SolutionDir)out\$(Configuration)\res" /s /e /I /y</
     <ClInclude Include="include\camera.h" />
     <ClInclude Include="include\core\console.h" />
     <ClInclude Include="include\core\coreGUI.h" />
+    <ClInclude Include="include\engine.h" />
+    <ClInclude Include="include\framebuffer.h" />
     <ClInclude Include="include\game\gui.h" />
     <ClInclude Include="include\inputManager.h" />
     <ClInclude Include="include\interface\CoreGUIListener.h" />
@@ -150,7 +158,9 @@ xcopy  "$(ProjectDir)res" "$(SolutionDir)out\$(Configuration)\res" /s /e /I /y</
     <ClInclude Include="include\lights\pointLight.h" />
     <ClInclude Include="include\mesh.h" />
     <ClInclude Include="include\model.h" />
+    <ClInclude Include="include\renderer.h" />
     <ClInclude Include="include\scene.h" />
+    <ClInclude Include="include\sceneManager.h" />
     <ClInclude Include="include\shader.h" />
     <ClInclude Include="include\shaderManager.h" />
     <ClInclude Include="include\skybox.h" />
@@ -235,6 +245,18 @@ xcopy  "$(ProjectDir)res" "$(SolutionDir)out\$(Configuration)\res" /s /e /I /y</
     <ClInclude Include="include\vendor\assimp\XmlParser.h" />
     <ClInclude Include="include\vendor\assimp\XMLTools.h" />
     <ClInclude Include="include\vendor\assimp\ZipArchiveIOSystem.h" />
+    <ClInclude Include="include\vendor\csys\api.h" />
+    <ClInclude Include="include\vendor\csys\arguments.h" />
+    <ClInclude Include="include\vendor\csys\argument_parser.h" />
+    <ClInclude Include="include\vendor\csys\autocomplete.h" />
+    <ClInclude Include="include\vendor\csys\command.h" />
+    <ClInclude Include="include\vendor\csys\csys.h" />
+    <ClInclude Include="include\vendor\csys\exceptions.h" />
+    <ClInclude Include="include\vendor\csys\history.h" />
+    <ClInclude Include="include\vendor\csys\item.h" />
+    <ClInclude Include="include\vendor\csys\script.h" />
+    <ClInclude Include="include\vendor\csys\string.h" />
+    <ClInclude Include="include\vendor\csys\system.h" />
     <ClInclude Include="include\vendor\glad\glad.h" />
     <ClInclude Include="include\vendor\GLFW\glfw3.h" />
     <ClInclude Include="include\vendor\GLFW\glfw3native.h" />
@@ -533,6 +555,7 @@ xcopy  "$(ProjectDir)res" "$(SolutionDir)out\$(Configuration)\res" /s /e /I /y</
     <ClInclude Include="include\vendor\imgui\imstb_rectpack.h" />
     <ClInclude Include="include\vendor\imgui\imstb_textedit.h" />
     <ClInclude Include="include\vendor\imgui\imstb_truetype.h" />
+    <ClInclude Include="include\vendor\imgui_console\imgui_console.h" />
     <ClInclude Include="include\vendor\Jolt\AABBTree\AABBTreeBuilder.h" />
     <ClInclude Include="include\vendor\Jolt\AABBTree\AABBTreeToBuffer.h" />
     <ClInclude Include="include\vendor\Jolt\AABBTree\NodeCodec\NodeCodecQuadTreeHalfFloat.h" />
@@ -828,6 +851,11 @@ xcopy  "$(ProjectDir)res" "$(SolutionDir)out\$(Configuration)\res" /s /e /I /y</
     <None Include="include\vendor\assimp\SmoothingGroups.inl" />
     <None Include="include\vendor\assimp\vector2.inl" />
     <None Include="include\vendor\assimp\vector3.inl" />
+    <None Include="include\vendor\csys\autocomplete.inl" />
+    <None Include="include\vendor\csys\history.inl" />
+    <None Include="include\vendor\csys\item.inl" />
+    <None Include="include\vendor\csys\script.inl" />
+    <None Include="include\vendor\csys\system.inl" />
     <None Include="include\vendor\glm\detail\func_common.inl" />
     <None Include="include\vendor\glm\detail\func_common_simd.inl" />
     <None Include="include\vendor\glm\detail\func_exponential.inl" />
@@ -1680,8 +1708,13 @@ xcopy  "$(ProjectDir)res" "$(SolutionDir)out\$(Configuration)\res" /s /e /I /y</
     <None Include="include\vendor\Jolt\Physics\Body\MotionProperties.inl" />
     <None Include="res\shader\basic.frag" />
     <None Include="res\shader\basic.vert" />
+    <None Include="res\shader\grid.frag" />
+    <None Include="res\shader\grid.vert" />
+    <None Include="res\shader\line.vert" />
     <None Include="res\shader\skybox.frag" />
     <None Include="res\shader\skybox.vert" />
+    <None Include="res\shader\test.frag" />
+    <None Include="res\shader\test.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
